--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -8,7 +8,7 @@ const { class: className } = Astro.props
 
 <article
   class:list={[
-    'prose max-w-full',
+    'prose',
     'prose-headings:font-bold prose-headings:text-theme-content',
     'prose-p:text-theme-content',
     'prose-strong:text-theme-content-strong',
