--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -45,7 +45,7 @@ const { Content } = await render(post)
       links={post.data.links}
     />
 
-    <article id='main-content'>
+    <article id='main-content' class='overflow-x-hidden'>
       {
         post.data.thumbnail && (
           <Image
