refactor(fediverse): restructure mastodon integration as generic fediverse config

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -162,11 +162,13 @@ const topTracks = await fetchTopTracks(
         reach out on social media or send me an email.
       </p>
       <ul class='not-prose flex flex-wrap gap-2 text-theme-content'>
-        <!-- mastodon verification link - invisible but accessible -->
+        <!-- redundant mastodon verification link - invisible but accessible -->
         {
-          site.integrations?.mastodon && (
+          site.integrations?.fediverse && (
             <li class='sr-only'>
-              <a rel='me' href={site.integrations.mastodon.url}>
+              <a
+                rel='me'
+                href={`${site.integrations.fediverse.instance}/${site.integrations.fediverse.username}`}>
                 Mastodon
               </a>
             </li>
