--- a/src/components/meta/BaseHead.astro
+++ b/src/components/meta/BaseHead.astro
@@ -40,10 +40,13 @@
     href='/rss.xml'
   />
 
-  <!-- mastodon verification, if configured in config.yaml -->
+  <!-- fediverse verification, if configured in config.yaml -->
   {
-    site.integrations?.mastodon && (
-      <link rel='me' href={site.integrations.mastodon.url} />
+    site.integrations?.fediverse && (
+      <link
+        rel='me'
+        href={`${site.integrations.fediverse.instance}/${site.integrations.fediverse.username}`}
+      />
     )
   }
 
