--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -163,14 +163,12 @@ const topTracks = await fetchTopTracks(
         {
           site.integrations?.fediverse && (
             <li class='sr-only flex gap-x-2 text-nowrap lowercase'>
-              <Link
-                rel='me'
+              <a
                 href={`${site.integrations.fediverse.instance}/${site.integrations.fediverse.username}`}
-                title='Mastodon'
-                class='lowercase'
-                externalInNewTab={true}>
+                rel='me'
+                title='Mastodon'>
                 Mastodon
-              </Link>
+              </a>
               /
             </li>
           )
