style(fediverse): remove redundant title attribute from mastodon link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,8 +165,7 @@ const topTracks = await fetchTopTracks(
             <li class='sr-only flex gap-x-2 text-nowrap lowercase'>
               <a
                 href={`${site.integrations.fediverse.instance}/${site.integrations.fediverse.username}`}
-                rel='me'
-                title='Mastodon'>
+                rel='me'>
                 Mastodon
               </a>
               /
